[gd_scene load_steps=15 format=3 uid="uid://ukw5085xqfwk"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_acom4"]
[ext_resource type="PackedScene" uid="uid://cbh8xd1dph6or" path="res://scenes/player.tscn" id="2_8vg10"]
[ext_resource type="Texture2D" uid="uid://b82cc4j0rxw0a" path="res://vsprites/cobbletileset.png" id="2_d8qwt"]
[ext_resource type="PackedScene" uid="uid://b2of67pys72vi" path="res://scenes/debugger.tscn" id="3_1am3c"]
[ext_resource type="PackedScene" uid="uid://cy1xk0s30t03n" path="res://scenes/torch.tscn" id="4_qgme3"]
[ext_resource type="PackedScene" uid="uid://6ctuull8erp1" path="res://scenes/enemy.tscn" id="5_amj0s"]
[ext_resource type="PackedScene" uid="uid://cg1hcbwhopbub" path="res://scenes/enemy_2.tscn" id="6_ysvk1"]
[ext_resource type="PackedScene" uid="uid://dtqwi5igc4dcj" path="res://scenes/pressure_plate.tscn" id="7_438w1"]
[ext_resource type="PackedScene" uid="uid://rgxdyndyorla" path="res://scenes/moving_platform.tscn" id="8_o4b0f"]
[ext_resource type="PackedScene" uid="uid://cvijs6ty7dsbo" path="res://scenes/end_lvl_trigger.tscn" id="10_5csj7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aqx3l"]
texture = ExtResource("2_d8qwt")
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_chnjy"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_aqx3l")

[sub_resource type="Gradient" id="Gradient_irgvk"]
offsets = PackedFloat32Array(0, 0.00649351, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.857143, 0.857143, 0.857143, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sjaet"]
gradient = SubResource("Gradient_irgvk")
fill = 1
fill_from = Vector2(0, 1)
fill_to = Vector2(1, 0.137615)

[node name="lvl_base" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_acom4")

[node name="Level" type="Node2D" parent="GameManager"]

[node name="TileMap" type="TileMap" parent="GameManager/Level"]
tile_set = SubResource("TileSet_chnjy")
format = 2
layer_0/tile_data = PackedInt32Array(65529, 65536, 0, 65530, 65536, 0, 65531, 65536, 0, 65532, 65536, 0, 65533, 65536, 0, 65534, 65536, 0, 65535, 65536, 0, 0, 65536, 0, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 131065, 65536, 1, 131066, 65536, 1, 131067, 65536, 1, 131068, 65536, 1, 131069, 65536, 1, 131070, 65536, 1, 131071, 65536, 1, 65536, 65536, 1, 65537, 65536, 1, 65538, 65536, 1, 65539, 65536, 1, 65540, 65536, 1, 65541, 65536, 1, 65542, 65536, 1, 6, 65536, 0, 65528, 65536, 0, 65527, 65536, 0, 65526, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0)

[node name="PointLight2D" type="PointLight2D" parent="GameManager/Level/TileMap"]
position = Vector2(414, -93)
scale = Vector2(24.9062, 6.84375)
color = Color(1, 0.919209, 0.691657, 1)
energy = 1.99
blend_mode = 1
range_z_min = -4096
range_z_max = 4096
range_item_cull_mask = 7
shadow_enabled = true
texture = SubResource("GradientTexture2D_sjaet")

[node name="Players" type="Node2D" parent="GameManager/Level"]
position = Vector2(6, -22)

[node name="PlayerOne" parent="GameManager/Level/Players" node_paths=PackedStringArray("follow_target") instance=ExtResource("2_8vg10")]
position = Vector2(-16, -4)
follow_target = NodePath("../PlayerTwo")

[node name="Camera2D" type="Camera2D" parent="GameManager/Level/Players/PlayerOne"]
position = Vector2(1, -7)
zoom = Vector2(3, 3)
limit_bottom = 50
limit_smoothed = true

[node name="Debugger" parent="GameManager/Level/Players/PlayerOne" node_paths=PackedStringArray("player") instance=ExtResource("3_1am3c")]
position = Vector2(1, -7)
player = NodePath("..")

[node name="PlayerTwo" parent="GameManager/Level/Players" node_paths=PackedStringArray("follow_target") instance=ExtResource("2_8vg10")]
follow_target = NodePath("../PlayerOne")
is_following = true

[node name="Camera2D" type="Camera2D" parent="GameManager/Level/Players/PlayerTwo"]
position = Vector2(1, -7)
zoom = Vector2(3, 3)
limit_bottom = 50
limit_smoothed = true

[node name="Torch" parent="GameManager/Level/Players/PlayerTwo" instance=ExtResource("4_qgme3")]
base_scale = 3.0

[node name="Enemies" type="Node2D" parent="GameManager/Level"]
position = Vector2(-270, 108)

[node name="Enemy" parent="GameManager/Level/Enemies" instance=ExtResource("5_amj0s")]
position = Vector2(3.05176e-05, -7.62939e-06)

[node name="enemy2" parent="GameManager/Level/Enemies" instance=ExtResource("6_ysvk1")]
position = Vector2(0, -22)

[node name="Interactables" type="Node2D" parent="GameManager/Level"]

[node name="PressurePlate" parent="GameManager/Level/Interactables" instance=ExtResource("7_438w1")]
position = Vector2(-191, 83)

[node name="MovingPlatform" parent="GameManager/Level/Interactables" instance=ExtResource("8_o4b0f")]
position = Vector2(-848, 105)

[node name="Lights" type="Node2D" parent="GameManager/Level"]
position = Vector2(1, 108)

[node name="WallTorch" parent="GameManager/Level/Lights" instance=ExtResource("4_qgme3")]
base_scale = 3.0

[node name="end_lvl_trigger" parent="GameManager/Level" node_paths=PackedStringArray("player1", "player2", "torch", "lights") instance=ExtResource("10_5csj7")]
position = Vector2(61, 107)
player1 = NodePath("../Players/PlayerOne")
player2 = NodePath("../Players/PlayerTwo")
torch = NodePath("../Players/PlayerTwo/Torch")
lights = NodePath("../Lights")

[node name="Camera2D" type="Camera2D" parent="GameManager"]
position = Vector2(1, -7)
zoom = Vector2(3, 3)
limit_bottom = 50
limit_smoothed = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="GameManager"]
autoplay = true
bus = &"Music"
